# ifrit

./: Cargo.toml  README.md
examples/: pe_add_section.rs
src/: lib.rs  writer.rs
src/tests/fixtures/: nixos-lanzaboote-pki.efi
