[package]
name = "ifrit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = { git = "https://github.com/RaitoBezarius/goblin", branch = "preps-for-ifrit-1" }
log = "0.4.20"
scroll = "0.12.0"

[dev-dependencies]
stderrlog = "0.5.4"
